// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/left-sidebar/LeftSidebarDropWrapper should allow custom classnames on wrapper 1`] = `
<div
  className="left-sidebar-drop-wrapper test-name"
>
  <div
    className="left-sidebar-drop-veil"
  >
    <span
      className="left-sidebar-drop-wrapper-text"
    />
  </div>
  <div>
    child
  </div>
</div>
`;

exports[`features/left-sidebar/LeftSidebarDropWrapper should not render drag target or drag text when specificed 1`] = `
<div
  className="left-sidebar-drop-wrapper"
>
  <div
    className="left-sidebar-drop-veil"
  >
    <span
      className="left-sidebar-drop-wrapper-text"
    >
      dragging to me
    </span>
  </div>
  <div>
    child
  </div>
</div>
`;

exports[`features/left-sidebar/LeftSidebarDropWrapper should not render drag target when specificed 1`] = `
<div
  className="left-sidebar-drop-wrapper"
>
  <div
    className="left-sidebar-drop-veil"
  >
    <span
      className="left-sidebar-drop-wrapper-text"
    />
  </div>
  <div>
    child
  </div>
</div>
`;

exports[`features/left-sidebar/LeftSidebarDropWrapper should pass thru any rest properties 1`] = `
<div
  className="left-sidebar-drop-wrapper test-name"
  data-resin-target="test"
>
  <div
    className="left-sidebar-drop-veil"
  >
    <span
      className="left-sidebar-drop-wrapper-text"
    />
  </div>
  <div>
    child
  </div>
</div>
`;

exports[`features/left-sidebar/LeftSidebarDropWrapper should render drag target and message when specificed 1`] = `
<div
  className="left-sidebar-drop-wrapper"
>
  <div
    className="left-sidebar-drop-veil"
  >
    <span
      className="left-sidebar-drop-wrapper-text"
    >
      dragging to me
    </span>
  </div>
  <div>
    child
  </div>
</div>
`;

exports[`features/left-sidebar/LeftSidebarDropWrapper should render dragging veil properly when specificed 1`] = `
<div
  className="left-sidebar-drop-wrapper"
>
  <div
    className="left-sidebar-drop-veil"
  >
    <span
      className="left-sidebar-drop-wrapper-text"
    />
  </div>
  <div>
    child
  </div>
</div>
`;

exports[`features/left-sidebar/LeftSidebarDropWrapper should render with default properties intact 1`] = `
<div
  className="left-sidebar-drop-wrapper"
>
  <div
    className="left-sidebar-drop-veil"
  >
    <span
      className="left-sidebar-drop-wrapper-text"
    />
  </div>
  <div>
    child
  </div>
</div>
`;
